<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/current_month"
        android:orderInCategory="100"
        android:title="@string/stat_frgm_current_month_menu_btn"
        app:showAsAction="never" />
    <item
        android:id="@+id/current_year"
        android:orderInCategory="100"
        android:title="@string/stat_frgm_current_year_menu_btn"
        app:showAsAction="never" />
    <item
        android:id="@+id/previous_month"
        android:orderInCategory="100"
        android:title="@string/stat_frgm_previous_month_menu_btn"
        app:showAsAction="never" />
    <item
        android:id="@+id/all_transactions"
        android:orderInCategory="100"
        android:title="@string/stat_frgm_all_transact"
        app:showAsAction="never" />
    <item
        android:id="@+id/custom_dates"
        android:orderInCategory="100"
        android:title="@string/stat_frgm_custom_dates"
        app:showAsAction="never" />


</menu>