<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:orientation="horizontal">

                <RadioButton
                    android:text="@string/radio_btn_expense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_btn_expense"
                    android:layout_weight="1"
                    android:checked="true"
                    android:gravity="left|center_vertical|start" />

                <RadioButton
                    android:text="@string/radio_btn_income"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radio_btn_income"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical|start" />

            </RadioGroup>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/txt_date"
                        android:text="@string/txt_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="normal|bold"
                        android:gravity="left|center_vertical"
                        android:layout_weight="1"
                        android:paddingLeft="6dp" />



                    <TextView
                        android:id="@+id/edit_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left|center_vertical"
                        android:layout_alignTop="@+id/txt_date"
                        android:layout_weight="1"
                        android:textStyle="normal|bold"
                        android:paddingLeft="6dp" />


                </LinearLayout>



                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txt_amount"
                        android:text="@string/txt_amount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left|center_vertical"
                        android:textStyle="normal|bold"
                        android:paddingLeft="6dp" />



                    <EditText
                        android:id="@+id/edit_amount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:layout_weight="1"
                        android:paddingLeft="6dp" />


                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txt_category"
                        android:text="@string/txt_category"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="normal|bold"
                        android:layout_weight="1"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="6dp" />



                    <Spinner
                        android:id="@+id/spinner_category"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1"/>

                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txt_description"
                        android:text="@string/txt_description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left|center_vertical"
                        android:textStyle="normal|bold"
                        android:paddingLeft="6dp" />



                    <EditText
                        android:id="@+id/edit_description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:ems="10"
                        android:layout_weight="1"
                        android:paddingLeft="6dp"
                        android:maxLength="495" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>