<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:text="@string/radio_btn_expense"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/radio_btn_expense"
                        android:layout_weight="1"
                        android:checked="true"
                        android:gravity="center|start" />

                    <RadioButton
                        android:text="@string/radio_btn_income"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/radio_btn_income"
                        android:layout_weight="1"
                        android:gravity="center|start" />

                </RadioGroup>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                <TextView
                    android:id="@+id/txt_date"
                    android:text="@string/txt_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="normal|bold"
                    android:gravity="bottom|right"
                    android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView2"
                        android:layout_weight="1" />

                    <TextView
                    android:id="@+id/edit_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center_vertical"
                    android:layout_alignTop="@+id/txt_date"
                    android:layout_weight="1"
                        android:textStyle="normal|bold" />


                    </LinearLayout>



                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1">

                <TextView
                    android:id="@+id/txt_amount"
                    android:text="@string/txt_amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom|right"
                    android:textStyle="normal|bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView3"
                        android:layout_weight="1" />

                    <EditText
                        android:id="@+id/edit_amount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:layout_weight="1"/>


                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txt_category"
                        android:text="@string/txt_category"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="normal|bold"
                        android:layout_weight="1"
                        android:gravity="bottom|right" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView4"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/spinner_category"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1"/>

                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1">

                <TextView
                    android:id="@+id/txt_description"
                    android:text="@string/txt_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom|right"
                    android:textStyle="normal|bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView5"
                        android:layout_weight="1" />

                    <EditText
                    android:id="@+id/edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:ems="10"
                    android:layout_weight="1"/>

                    </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>