<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:id="@+id/txt_from_date"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:id="@+id/txt_to_date"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/text_stat_income_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_stat_income_total"
                    android:layout_weight="1"
                    android:textStyle="normal|bold|italic"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_stat_income_total_amount"
                    android:layout_weight="1"
                    android:textStyle="normal|bold|italic"
                    android:gravity="right"
                    android:text="Calculating..."
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_stat_categories_income"
                    android:layout_weight="1"
                    android:paddingLeft="4dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_stat_categories_income_amounts"
                    android:layout_weight="1"
                    android:paddingRight="4dp"
                    android:gravity="right" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/txt_stat_expenxse_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_stat_expense_total"
                    android:layout_weight="1"
                    android:textStyle="normal|bold|italic"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_stat_expence_total_amount"
                    android:layout_weight="1"
                    android:textStyle="normal|bold|italic"
                    android:gravity="right"
                    android:text="Calculating..."
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_stat_category_expense"
                    android:layout_weight="1"
                    android:paddingLeft="4dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_stat_category_expense_amount"
                    android:layout_weight="1"
                    android:paddingRight="4dp"
                    android:gravity="right" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/txt_stat_balance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_stat_balance"
                    android:layout_weight="1"
                    android:textStyle="normal|bold|italic"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_stat_balance_amount"
                    android:layout_weight="1"
                    android:textStyle="normal|bold|italic"
                    android:gravity="right"
                    android:text="Calculating..."
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>